--- a/app/tovar.html
+++ b/app/tovar.html
@@ -538,8 +538,69 @@
 
 		<div class="container-flued gradient_bg margin_top100">
 			<div class="row">
-				<div class="container mobilefluid">
-					<div class="row">
+				<div class="col-12">
+				<div class="container display-sm-block">
+					<div class="row b-item__tabs-mobile">
+						<div class="col-12">
+							<div class="b-item__tabs d-md-flex gradient_bg">
+								<a href="#" class="b-item__tabs-element active"><span class="b-item__tabs-text">Технические характеристики</span></a>
+									<div class="b-item__tab">
+										<div class="row">
+											<div class="col-12">
+												<p>Кровельный материал Metrotile - стабильный лидер по продажам среди элитных покрытий уже несколько лет. Композитная черепица состоит из нескольких слоёв, в основе - стальной лист. Нержавеющий состав алюмоцинк нанесён на с обеих сторон профиля.</p>
+											</div>
+										</div>
+										<div class="row b-item__metric-container">
+											<div class="col-12 d-md-flex">
+											<div class="b-item__metric length">
+												<div class="b-item__metric-title">Длина</div>
+												<div class="b-item__metric-value">1165 <span class="b-item__metric-unit">мм</span></div>
+											</div>
+											<div class="b-item__metric width">
+												<div class="b-item__metric-title">Ширина</div>
+												<div class="b-item__metric-value">415 <span class="b-item__metric-unit">мм</span></div>
+											</div>
+											<div class="b-item__metric square">
+												<div class="b-item__metric-title">Площадь</div>
+												<div class="b-item__metric-value">0.48 <span class="b-item__metric-unit">м²</span></div>
+											</div>
+											<div class="b-item__metric waveheight">
+												<div class="b-item__metric-title">Высота волны</div>
+												<div class="b-item__metric-value">70 <span class="b-item__metric-unit">мм</span></div>
+											</div>
+											<div class="b-item__metric weight">
+												<div class="b-item__metric-title">Вес м²</div>
+												<div class="b-item__metric-value">70 <span class="b-item__metric-unit">м²</span></div>
+											</div>
+											</div>
+										</div>
+										<div class="row b-item__metric-container">
+											<div class="col-12 d-md-flex">
+											<div class="b-item__metric weight2">
+												<div class="b-item__metric-title">Вес шт</div>
+												<div class="b-item__metric-value">3.0 <span class="b-item__metric-unit">кг</span></div>
+											</div>
+											<div class="b-item__metric expense">
+												<div class="b-item__metric-title">Расход</div>
+												<div class="b-item__metric-value">25 <span class="b-item__metric-unit">шт/м²</span></div>
+											</div>
+											<div class="b-item__metric basis">
+												<div class="b-item__metric-value">Стальная<br>основа</div>
+											</div>
+											</div>
+										</div>
+									</div>
+								<a href="#" class="b-item__tabs-element"><span class="b-item__tabs-text">Цветовые решения</span></a>
+								<a href="#" class="b-item__tabs-element"><span class="b-item__tabs-text">Документация</span></a>
+								<a href="#" class="b-item__tabs-element"><span class="b-item__tabs-text">Отзывы</span></a>
+								<a href="#" class="b-item__tabs-element"><span class="b-item__tabs-text">Фото и видео</span></a>
+								<a href="#" class="b-item__tabs-element"><span class="b-item__tabs-text">Доставка</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container display-sm-none">
+					<div class="row b-item__tabs-mobile">
 						<div class="col-12">
 							<div class="b-item__tabs d-md-flex gradient_bg">
 								<a href="#" class="b-item__tabs-element active"><span class="b-item__tabs-text">Технические характеристики</span></a>
@@ -551,53 +612,56 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-12">
-							<p>Кровельный материал Metrotile - стабильный лидер по продажам среди элитных покрытий уже несколько лет. Композитная черепица состоит из нескольких слоёв, в основе - стальной лист. Нержавеющий состав алюмоцинк нанесён на с обеих сторон профиля.</p>
+					<div class="b-item__tab">
+						<div class="row">
+							<div class="col-12">
+								<p>Кровельный материал Metrotile - стабильный лидер по продажам среди элитных покрытий уже несколько лет. Композитная черепица состоит из нескольких слоёв, в основе - стальной лист. Нержавеющий состав алюмоцинк нанесён на с обеих сторон профиля.</p>
+							</div>
 						</div>
-					</div>
-					<div class="row b-item__metric-container">
-						<div class="col-12 d-flex">
-						<div class="b-item__metric length">
-							<div class="b-item__metric-title">Длина</div>
-							<div class="b-item__metric-value">1165 <span class="b-item__metric-unit">мм</span></div>
+						<div class="row b-item__metric-container">
+							<div class="col-12 d-md-flex">
+							<div class="b-item__metric length">
+								<div class="b-item__metric-title">Длина</div>
+								<div class="b-item__metric-value">1165 <span class="b-item__metric-unit">мм</span></div>
+							</div>
+							<div class="b-item__metric width">
+								<div class="b-item__metric-title">Ширина</div>
+								<div class="b-item__metric-value">415 <span class="b-item__metric-unit">мм</span></div>
+							</div>
+							<div class="b-item__metric square">
+								<div class="b-item__metric-title">Площадь</div>
+								<div class="b-item__metric-value">0.48 <span class="b-item__metric-unit">м²</span></div>
+							</div>
+							<div class="b-item__metric waveheight">
+								<div class="b-item__metric-title">Высота волны</div>
+								<div class="b-item__metric-value">70 <span class="b-item__metric-unit">мм</span></div>
+							</div>
+							<div class="b-item__metric weight">
+								<div class="b-item__metric-title">Вес м²</div>
+								<div class="b-item__metric-value">70 <span class="b-item__metric-unit">м²</span></div>
+							</div>
+							</div>
 						</div>
-						<div class="b-item__metric width">
-							<div class="b-item__metric-title">Ширина</div>
-							<div class="b-item__metric-value">415 <span class="b-item__metric-unit">мм</span></div>
-						</div>
-						<div class="b-item__metric square">
-							<div class="b-item__metric-title">Площадь</div>
-							<div class="b-item__metric-value">0.48 <span class="b-item__metric-unit">м²</span></div>
-						</div>
-						<div class="b-item__metric waveheight">
-							<div class="b-item__metric-title">Высота волны</div>
-							<div class="b-item__metric-value">70 <span class="b-item__metric-unit">мм</span></div>
-						</div>
-						<div class="b-item__metric weight">
-							<div class="b-item__metric-title">Вес м²</div>
-							<div class="b-item__metric-value">70 <span class="b-item__metric-unit">м²</span></div>
-						</div>
-						</div>
-					</div>
-					<div class="row b-item__metric-container">
-						<div class="col-12 d-flex">
-						<div class="b-item__metric weight2">
-							<div class="b-item__metric-title">Вес шт</div>
-							<div class="b-item__metric-value">3.0 <span class="b-item__metric-unit">кг</span></div>
-						</div>
-						<div class="b-item__metric expense">
-							<div class="b-item__metric-title">Расход</div>
-							<div class="b-item__metric-value">25 <span class="b-item__metric-unit">шт/м²</span></div>
-						</div>
-						<div class="b-item__metric basis">
-							<div class="b-item__metric-value">Стальная<br>основа</div>
-						</div>
+						<div class="row b-item__metric-container">
+							<div class="col-12 d-md-flex">
+							<div class="b-item__metric weight2">
+								<div class="b-item__metric-title">Вес шт</div>
+								<div class="b-item__metric-value">3.0 <span class="b-item__metric-unit">кг</span></div>
+							</div>
+							<div class="b-item__metric expense">
+								<div class="b-item__metric-title">Расход</div>
+								<div class="b-item__metric-value">25 <span class="b-item__metric-unit">шт/м²</span></div>
+							</div>
+							<div class="b-item__metric basis">
+								<div class="b-item__metric-value">Стальная<br>основа</div>
+							</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	<div class="b-shop">
 					<div class="container">
 					<div class="row">
@@ -1003,37 +1067,41 @@
 						<div class="offset-md-1 col-md-4 b-seo__image" style="background: url(img/seo_text_pic.png) no-repeat;">
 							<div class="b-seo__container"></div>
 						</div>
-					</div>	
-
-					<div class="b-links b-links__wrapper row">
-						<div class="col-12">
-							<div class="d-flex">
-								<div class="b-links__block no_icon" style="background-image: url(/img/links_block.png);">
-									<a class="b-links__link" href="#"></a>
-									<span class="b-links__title">где купить</span>
-								</div>
-								<div class="b-links__block icon icon1">
-									<a class="b-links__link" href="#"></a>
-									<span class="b-links__title">расчет<br>кровли</span>
-								</div>
-								<div class="b-links__block no_icon" style="background-image: url(img/links_block2.png);">
-									<a class="b-links__link" href="#"></a>
-									МОнтаж
-								</div>
-								<div class="b-links__block icon icon2">
-									<a class="b-links__link" href="#"></a>
-									<span class="b-links__title">видео</span>
-								</div>
-								<div class="b-links__block no_icon" style="background-image: url(img/links_block3.png);">
-									<a class="b-links__link" href="#"></a>
-									Инструкции<br> по монтажу
-								</div>
-							</div>				
-						</div>
-					</div>						
+					</div>					
 					</div>		
 	</div>
 
+
+<div class="b-links">
+	<div class="b-links__wrapper container">
+			<div class="row">
+				<div class="col-12">
+					<div class="d-md-flex">
+						<div class="b-links__block no_icon" style="background-image: url(/img/links_block.png);">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">где купить</span>
+						</div>
+						<div class="b-links__block icon icon1">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">расчет<br>кровли</span>
+						</div>
+						<div class="b-links__block no_icon" style="background-image: url(img/links_block2.png);">
+							<a class="b-links__link" href="#"></a>
+							МОнтаж
+						</div>
+						<div class="b-links__block icon icon2">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">видео</span>
+						</div>
+						<div class="b-links__block no_icon" style="background-image: url(img/links_block3.png);">
+							<a class="b-links__link" href="#"></a>
+							Инструкции<br> по монтажу
+						</div>
+					</div>				
+				</div>
+			</div>
+	</div>		
+</div>	
 	</section>
 	<footer class="footer gradient_bg">
 		<div class="container">
