--- a/app/index.html
+++ b/app/index.html
@@ -615,7 +615,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<h3 class="gradient text">Архитекторам</h3>
+					<h3 class="b-professionals__title gradient text">Архитекторам</h3>
 					<div class="b-professionals__desc">Приглашаем к сотрудничеству,<br> 
 						уверены оно может быть успешным <br> 
 						и взаимовыгодным!
@@ -624,7 +624,7 @@
 					<a class="b-professionals__desc-link" href="#">Модели  и текстуры</a>
 				</div>
 				<div class="col-md-4">
-					<h3 class="gradient text">Домо—<br>владельцам</h3>
+					<h3 class="b-professionals__title gradient text">Домо—<br>владельцам</h3>
 					<div class="b-professionals__desc">Выбирайте любое цветовое решение <br> 
 					и купить композитную металлочерепицу, <br> 
 					оставив заявку на нашем сайте.
@@ -633,7 +633,7 @@
 					<a class="b-professionals__desc-link" href="#">Расчёт</a>
 				</div>
 				<div class="col-md-4">
-					<h3 class="gradient text">Застройщикам</h3>
+					<h3 class="b-professionals__title gradient text">Застройщикам</h3>
 					<div class="b-professionals__desc">Высокое качество материалов,<br>   бельгийскаятехнология и выгодные<br>  условия сотрудничества.</div>
 					<a class="b-professionals__desc-link" href="#">Сотрудничество</a>
 					<a class="b-professionals__desc-link" href="#">Условия</a>
@@ -745,7 +745,7 @@
 	<section class="b-shop gutter_bottom">
 					<div class="container">
 					<div class="row">
-					<div class="col-12">
+					<div class="col-12 no-gutters">
 					<h2 class="gradient text">Популярные товары</h2>
 					<div id="wideslider_counter4" class="counter"></div>
 					<div id="wideslider4" class="b-shop__slider owl-carousel">
@@ -759,17 +759,44 @@
 									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
 								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
+                <div class="b-shop__desc-bottom">
+  								<div class="b-shop__price">
+  									586 &#8381;
+  								</div>
+  								<form class="b-shop__form" action="">
+  									<div class="b-shop__quantity clearfix">
+  										<div class="b-shop__quantity-minus">-</div>
+  										<input class="b-shop__quantity-input" type="text" value="1111">
+  										<div class="b-shop__quantity-plus">+</div>
+  									</div>
+  									<button class="button buy" type="submit">Купить</button>
+  								</form>
+  							</div>
+             </div>
+						</div>
+						<div class="b-shop__item">
+							<div class="b-shop__img">
+								<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
+							</div>
+							<div class="b-shop__desc">
+								<div class="b-shop__icons">
+									<a class="b-shop__icons-icon" href="#"><i class="far fa-heart"></i></a>
+									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
+								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
+                <div class="b-shop__desc-bottom">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 							</div>
 						</div>
 						<div class="b-shop__item">
@@ -782,17 +809,19 @@
 									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
 								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
-								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
+                <div class="b-shop__desc-bottom">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 							</div>
 						</div>
 						<div class="b-shop__item">
@@ -805,17 +834,19 @@
 									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
 								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
-								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
+                <div class="b-shop__desc-bottom">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 							</div>
 						</div>
 						<div class="b-shop__item">
@@ -828,17 +859,19 @@
 									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
 								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
-								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
+                <div class="b-shop__desc-bottom">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 							</div>
 						</div>
 						<div class="b-shop__item">
@@ -851,17 +884,19 @@
 									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
 								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
-								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
+                <div class="b-shop__desc-bottom">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 							</div>
 						</div>
 						<div class="b-shop__item">
@@ -874,17 +909,19 @@
 									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
 								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
-								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
+                <div class="b-shop__desc-bottom">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 							</div>
 						</div>
 						<div class="b-shop__item">
@@ -897,40 +934,19 @@
 									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 								</div>
 								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
-								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
-							</div>
-						</div>
-						<div class="b-shop__item">
-							<div class="b-shop__img">
-								<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
-							</div>
-							<div class="b-shop__desc">
-								<div class="b-shop__icons">
-									<a class="b-shop__icons-icon" href="#"><i class="far fa-heart"></i></a>
-									<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
-								</div>
-								<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-								<div class="b-shop__price">
-									586 &#8381;
-								</div>
-								<form class="b-shop__form" action="">
-									<div class="b-shop__quantity clearfix">
-										<div class="b-shop__quantity-minus">-</div>
-										<input class="b-shop__quantity-input" type="text" value="1111">
-										<div class="b-shop__quantity-plus">+</div>
-									</div>
-									<button class="button buy" type="submit">Купить</button>
-								</form>
+                <div class="b-shop__desc-bottom">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 							</div>
 						</div>
 					</div>
@@ -962,8 +978,8 @@
 				</div>
 			</div>
 			<div class="row">
-					<div class="b-seo__image col-lg-8 col-md-7"  style="background: url(img/seo_text_frame.png) no-repeat;">	
-							<div class="b-seo__container"></div>
+					<div class="b-seo__image video col-lg-8 col-md-7"  style="background: url(img/seo_text_frame.png) no-repeat;">	
+							<div class="b-seo__container"><a href="#" class="video-play"></a></div>
 					</div>
 					<div class="col-lg-4 col-md-5 d-flex align-items-center justify-content-center">
 						<div class="b-seo__block-gradient">
@@ -1048,7 +1064,7 @@
               <b class="footer__contacts-title">Адрес</b>
               <div>105120, Москва, Костомаровский пер., д. 3, офис 423</div>
             </div>
-            <div class="col-md-6">
+            <div class="offset-md-1 col-md-5">
               <b class="footer__contacts-title">Контакты</b>
               <a class="footer__contacts-phone" href="tel:74953634432">+7 (495) 363 44 32</a>
               <a class="footer__contacts-phone" href="tel:74957874760">+7 (495) 787 47 60</a>
@@ -1059,7 +1075,7 @@
             <div class="col-6">
               <input class="footer__contacts-subscribe" placeholder="Подпишитесь на новости"/>
             </div>
-            <div class="col-6 d-flex justify-content-start">
+            <div class="offset-md-1 col-5 d-flex justify-content-start">
               <a href="#" class="footer__contacts-link blue_link">Подписаться</a>
             </div>
             
