--- a/app/catalog_spisok_tovarov.html
+++ b/app/catalog_spisok_tovarov.html
@@ -452,21 +452,21 @@
 						<div class="b-collections__navigation">
 							<div class="b-collections__navigation-head">Коллекции</div>
 							<div class="b-collections__navigation-container">
-								<a href="#" class="b-collections__navigation-link active">MetroBond</a>
-								<a href="#" class="b-collections__navigation-link">MetroRoman</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile Mistral</a>
-								<a href="#" class="b-collections__navigation-link">MetroShake II</a>
-								<a href="#" class="b-collections__navigation-link">MetroClassic</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile Gallo</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile Romana</a>
-								<a href="#" class="b-collections__navigation-link">MetroViksen</a>
-								<a href="#" class="b-collections__navigation-link">MetroCooper</a>
-								<a href="#" class="b-collections__navigation-link">Aquapan</a>
+								<a href="#" class="b-collections__navigation-link active"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">MetroBond</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">MetroRoman</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Metrotile Mistral</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">MetroShake II</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">MetroClassic</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Metrotile Gallo</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Metrotile Romana</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">MetroViksen</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">MetroCooper</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Aquapan</a>
 								<a href="#" class="b-collections__navigation-new gradient">Новинки</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile IPanel</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile ISlate</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile IShake</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile IShingle</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Metrotile IPanel</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Metrotile ISlate</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Metrotile IShake</a>
+								<a href="#" class="b-collections__navigation-link"><img class="b-collections__navigation-img" src="img/collections.jpg" alt="collections">Metrotile IShingle</a>
 							</div>
 						</div>
 						<div class="b-collections__navigation">
@@ -480,7 +480,7 @@
 				<div class="col-md-10">
 					<form action="" class="b-filter gradient_bg">
 						<div class="row">
-							<div class="col-md-3 b-select">
+							<div class="col-lg-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Элемент:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -490,8 +490,8 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-md-3 b-select"></div>
-							<div class="col-md-3 b-select">
+							<div class="col-lg-3 b-select"></div>
+							<div class="col-lg-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Коллекции:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -501,7 +501,7 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-md-3 b-select">
+							<div class="col-lg-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Цвет кровли:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -520,14 +520,14 @@
 						</div>
 					</form>
 					<div class="row">	
-						<div class="col-4 d-flex">	
+						<div class="col-lg-6 d-flex">	
 						<div class="b-filter__sort">
 							<span class="b-filter__sort-title">Сортировать по</span>
 							<a class="b-filter__sort-link active"  href="#">цене</a>
 							<a class="b-filter__sort-link" href="#">названию</a>
 						</div>
 						</div>
-						<div class="col-8 d-flex justify-content-end">
+						<div class="col-lg-6 d-flex justify-content-end">
 						<div class="b-filter__number">
 							<span class="b-filter__number-title">Выводить по</span>
 							<a class="b-filter__number-link active" href="#">10</a>
@@ -538,7 +538,7 @@
 					</div>
 					<div class="b-shop">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-lg-3 col-md-4">
 								<div class="b-shop__item">
 									<div class="b-shop__img">
 										<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
@@ -578,21 +578,23 @@
 											<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 										</div>
 										<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-										<div class="b-shop__price">
-											586 &#8381;
-										</div>
-										<form class="b-shop__form" action="">
-											<div class="b-shop__quantity clearfix">
-												<div class="b-shop__quantity-minus">-</div>
-												<input class="b-shop__quantity-input" type="text" value="1111">
-												<div class="b-shop__quantity-plus">+</div>
-											</div>
-											<button class="button buy" type="submit">Купить</button>
-										</form>
+                <div class="b-shop__desc-bottom clearfix">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4">
+							<div class="col-lg-3 col-md-4">
 								<div class="b-shop__item">
 									<div class="b-shop__img">
 										<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
@@ -632,21 +634,79 @@
 											<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 										</div>
 										<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-										<div class="b-shop__price">
-											586 &#8381;
-										</div>
-										<form class="b-shop__form" action="">
-											<div class="b-shop__quantity clearfix">
-												<div class="b-shop__quantity-minus">-</div>
-												<input class="b-shop__quantity-input" type="text" value="1111">
-												<div class="b-shop__quantity-plus">+</div>
-											</div>
-											<button class="button buy" type="submit">Купить</button>
-										</form>
+                <div class="b-shop__desc-bottom clearfix">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4">
+              <div class="col-lg-3 col-md-4">
+                <div class="b-shop__item">
+                  <div class="b-shop__img">
+                    <img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
+                      <div class="b-shop__popup">
+                        <div class="b-shop__popup-options">
+                          <div class="b-shop__popup-row clearfix">
+                            <span class="b-shop__popup-cell head">Длина:</span>
+                            <span class="b-shop__popup-cell head">Ширина:</span>
+                            <span class="b-shop__popup-cell head">Высота волны:</span>
+                            <span class="b-shop__popup-cell">1330 мм</span>
+                            <span class="b-shop__popup-cell">410 мм</span>
+                            <span class="b-shop__popup-cell">37 мм</span>
+                          </div>
+                          <div class="b-shop__popup-row clearfix">
+                            <span class="b-shop__popup-cell head">Площадь:</span>
+                            <span class="b-shop__popup-cell head">Вес шт:</span>
+                            <span class="b-shop__popup-cell head">Вес м2:</span>
+                            <span class="b-shop__popup-cell">0.55 м²</span>
+                            <span class="b-shop__popup-cell">2.95 кг</span>
+                            <span class="b-shop__popup-cell">6.3 кг</span>
+                          </div>
+                          <div class="b-shop__popup-row clearfix">
+                            <span class="b-shop__popup-cell head">Расход:</span>
+                            <span class="b-shop__popup-cell"></span>
+                            <span class="b-shop__popup-cell">Стальная основа</span>
+                            <span class="b-shop__popup-cell">2.17 шт/м²</span>
+                            <span class="b-shop__popup-cell"></span>
+                            <span class="b-shop__popup-cell"></span>
+                          </div>
+                        </div>
+                        <button type="submit" class="button">Быстрый просмотр</button>
+                      </div>
+                  </div>
+                  <div class="b-shop__desc">
+                    <div class="b-shop__icons">
+                      <a class="b-shop__icons-icon" href="#"><i class="far fa-heart"></i></a>
+                      <a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
+                    </div>
+                    <a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
+                <div class="b-shop__desc-bottom clearfix">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
+                  </div>
+                </div>
+              </div>
+							<div class="col-lg-3 col-md-4">
 								<div class="b-shop__item">
 									<div class="b-shop__img">
 										<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
@@ -686,17 +746,19 @@
 											<a class="b-shop__icons-icon" href="#"><i class="fas fa-balance-scale"></i></a>
 										</div>
 										<a href="#" class="b-shop__link">Композитная черепица MetroBond зеленый</a>
-										<div class="b-shop__price">
-											586 &#8381;
-										</div>
-										<form class="b-shop__form" action="">
-											<div class="b-shop__quantity clearfix">
-												<div class="b-shop__quantity-minus">-</div>
-												<input class="b-shop__quantity-input" type="text" value="1111">
-												<div class="b-shop__quantity-plus">+</div>
-											</div>
-											<button class="button buy" type="submit">Купить</button>
-										</form>
+                <div class="b-shop__desc-bottom clearfix">
+                  <div class="b-shop__price">
+                    586 &#8381;
+                  </div>
+                  <form class="b-shop__form" action="">
+                    <div class="b-shop__quantity clearfix">
+                      <div class="b-shop__quantity-minus">-</div>
+                      <input class="b-shop__quantity-input" type="text" value="1111">
+                      <div class="b-shop__quantity-plus">+</div>
+                    </div>
+                    <button class="button buy" type="submit">Купить</button>
+                  </form>
+                </div>
 									</div>
 								</div>
 							</div>
